--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --color0: #61589c;
     --color1: #6653dd;
     --color2: #8d7cff;
-    --color3: #a69be9;
+    --color3: #e7e0ff;
 
     --contrast: #EE6B4D;
 
@@ -63,7 +63,7 @@ main {
 
     width: 70%;
     height: 100%;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -95,13 +95,10 @@ main {
     opacity: 0.75;
 }
 
-#title, #today {
-    font-weight: 300;
-}
-
 #title {
     margin-left: 20px;
 
+    font-weight: 300;
     font-family: 'Comfortaa', sans-serif;
     letter-spacing: 1px;
     font-size: 2.5em;
@@ -111,6 +108,12 @@ main {
 #today {
     margin-left: 30px;
 
+    font-weight: 400;
+    font-family: 'League Spartan', sans-serif;
+}
+
+#today #today-date {
+    font-weight: 300;
     font-family: 'League Spartan', sans-serif;
 }
 
@@ -123,30 +126,62 @@ main {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
+#inbox-button {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 15px 20px;
+}
+
 #inbox {
     display: block;
-    margin-top: 20px;
-    margin-left: 20px;
 
     font-size: 1.25em;
 
     color: var(--black);
 }
 
+#add-task {
+    display: block;
+
+    padding: 5px;
+
+    border: none;
+    border-radius: 50%;
+    color: var(--white);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.35);
+    background-color: var(--contrast);
+
+    transition: 0.5s;
+
+    cursor: pointer;
+}
+
+#add-task:hover {
+    transform: scale(1.1);
+}
+
 #task-list {
-    padding: 20px;
+    padding: 0px 20px;
     list-style: none;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    gap: 10px;
 }
 
 .task {
-    height: 30px;
-    padding: 10px;
+    height: 40px;
+    padding: 0px 10px;
 
     display: flex;
     align-items: center;
     gap: 8px;
 
     border-radius: 5px;
+    background-color: var(--color3);
 }
 
 .task input {
@@ -164,22 +199,26 @@ main {
     color: var(--black);
 }
 
-.task button {
-    border: none;
-    color: var(--black); 
-    background-color: var(--white);
-    
-    cursor: pointer;
+.task p:focus {
+    outline: 2px solid var(--color0);
+    border-radius: 4px;
 }
 
-.task button span {
-    width: 20px;
-    height: 20px;
+.task button {
+    border: none;
+    color: var(--black);
+    background-color: transparent;
+
+    cursor: pointer;
 }
 
 .completed-task {
     text-decoration: line-through;
     opacity: 0.5;
+}
+
+#add-task-mobile {
+    display: none;
 }
 
 @media (max-width: 500px) {
@@ -199,5 +238,29 @@ main {
 
     #details {
         border-radius: 0;
+    }
+
+    #add-task {
+        display: none;
+    }
+
+    #add-task-mobile {
+        position: fixed;
+        top: 90%;
+        right: 5%;
+
+        padding: 8px;
+
+        display: block;
+
+        border: none;
+        border-radius: 50%;
+        color: var(--white);
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.35);
+        background-color: var(--contrast);
+
+        transition: 0.5s;
+
+        cursor: pointer;
     }
 }
