--- a/frontend/style.css
+++ b/frontend/style.css
@@ -69,32 +69,6 @@ main {
     justify-content: space-around;
 }
 
-#date::after {
-    position: absolute;
-
-    content: '';
-    width: 75%;
-    height: 10px;
-
-    top: 95.55%;
-
-    background-color: var(--color1);
-    opacity: 0.75;
-}
-
-#date::before {
-    position: absolute;
-
-    content: '';
-    width: 100%;
-    height: 10px;
-
-    top: 95.55%;
-
-    background-color: var(--gray);
-    opacity: 0.75;
-}
-
 #title {
     margin-left: 20px;
 
@@ -115,6 +89,34 @@ main {
 #today #today-date {
     font-weight: 300;
     font-family: 'League Spartan', sans-serif;
+}
+
+#progress-bar {
+    position: absolute;
+
+    content: '';
+    width: 0%;
+    height: 10px;
+
+    top: 95.55%;
+
+    background-color: var(--color1);
+    opacity: 0.75;
+
+    transition: 0.5s;
+}
+
+#progress-bar-background {
+    position: absolute;
+
+    content: '';
+    width: 100%;
+    height: 10px;
+
+    top: 95.55%;
+
+    background-color: var(--gray);
+    opacity: 0.75;
 }
 
 #details {
@@ -143,8 +145,6 @@ main {
 }
 
 #add-task {
-    display: block;
-
     padding: 5px;
 
     border: none;
@@ -162,8 +162,16 @@ main {
     transform: scale(1.1);
 }
 
+.add-task-mobile {
+    position: fixed;
+    top: 90%;
+    right: 5%;
+
+    transform: scale(1.25);
+}
+
 #task-list {
-    padding: 0px 20px;
+    padding: 0px 20px 20px 20px;
     list-style: none;
 
     display: flex;
@@ -182,6 +190,12 @@ main {
 
     border-radius: 5px;
     background-color: var(--color3);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.completed-task {
+    text-decoration: line-through;
+    opacity: 0.5;
 }
 
 .task input {
@@ -206,19 +220,16 @@ main {
 
 .task button {
     border: none;
-    color: var(--black);
+    color: var(--color0);
     background-color: transparent;
+
+    transition: 0.5s;
 
     cursor: pointer;
 }
 
-.completed-task {
-    text-decoration: line-through;
-    opacity: 0.5;
-}
-
-#add-task-mobile {
-    display: none;
+.task button:hover {
+    color: var(--black);
 }
 
 @media (max-width: 500px) {
@@ -238,29 +249,5 @@ main {
 
     #details {
         border-radius: 0;
-    }
-
-    #add-task {
-        display: none;
-    }
-
-    #add-task-mobile {
-        position: fixed;
-        top: 90%;
-        right: 5%;
-
-        padding: 8px;
-
-        display: block;
-
-        border: none;
-        border-radius: 50%;
-        color: var(--white);
-        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.35);
-        background-color: var(--contrast);
-
-        transition: 0.5s;
-
-        cursor: pointer;
     }
 }
