--- a/frontend/style.css
+++ b/frontend/style.css
@@ -6,14 +6,14 @@
     --color0: #61589c;
     --color1: #6653dd;
     --color2: #8d7cff;
-    --color3: #e7e0ff;
+    --color3: #e6e0ff;
 
     --contrast: #EE6B4D;
 
     --white: #f8f8f8;
     --gray: #afadbbbf;
     --black: #302941;
-    --background: #d7ddec;
+    --background: #d9ddfc;
 }
 
 * {
@@ -31,10 +31,25 @@ body {
     background-color: var(--background);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    
+    background-color: var(--color2);
+}
+
 main {
     min-width: 200px;
     max-width: 700px;
     min-height: 500px;
+    padding-bottom: 20px;
     margin: auto;
 
     border-radius: 10px;
@@ -47,8 +62,6 @@ main {
     width: 100%;
     height: 225px;
 
-    display: flex;
-
     border-radius: 10px 10px 0px 0px;
 
     color: var(--white);
@@ -60,8 +73,6 @@ main {
 
 #date {
     position: relative;
-
-    width: 70%;
     height: 100%;
 
     display: flex;
@@ -103,7 +114,7 @@ main {
     background-color: var(--color1);
     opacity: 0.75;
 
-    transition: 0.5s;
+    transition: 0.75s;
 }
 
 #progress-bar-background {
@@ -117,15 +128,6 @@ main {
 
     background-color: var(--gray);
     opacity: 0.75;
-}
-
-#details {
-    width: 30%;
-    height: 100%;
-
-    border-radius: 0px 10px 0px 0px;
-
-    background-color: rgba(0, 0, 0, 0.2);
 }
 
 #inbox-button {
@@ -171,13 +173,11 @@ main {
 }
 
 #task-list {
-    padding: 0px 20px 20px 20px;
     list-style: none;
 
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    gap: 10px;
+    margin: 0px 20px;
+    max-height: 200px;
+    overflow: auto;
 }
 
 .task {
@@ -190,7 +190,10 @@ main {
 
     border-radius: 5px;
     background-color: var(--color3);
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.task+.task {
+    margin-top: 10px;
 }
 
 .completed-task {
@@ -249,5 +252,10 @@ main {
 
     #details {
         border-radius: 0;
+    }
+
+    #task-list {
+        overflow: hidden;
+        max-height: inherit;
     }
 }
