--- a/css/style.css
+++ b/css/style.css
@@ -162,8 +162,8 @@ main {
 }
 
 .task {
-    height: 40px;
-    padding: 0px 10px;
+    min-height: 40px;
+    padding: 5px 10px;
 
     display: flex;
     align-items: center;
