Ajustes feitos para comunicar com o backend

--- a/css/settings.css
+++ b/css/settings.css
@@ -24,3 +24,26 @@
 
     font-family: 'Roboto', sans-serif;
 }
+
+.load {
+    display: none;
+    margin: auto;
+    width: 35px;
+    height: 35px;
+
+    border-radius: 50%;
+    background-color: transparent;
+    border: 3px solid var(--color3);
+    border-top: 3px solid var(--contrast);
+    animation: spinner infinite ease-in-out 1s;
+}
+
+@keyframes spinner {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
